# Games101_Homework_S2021

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
homework_1/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
homework_2/: CMakeLists.txt  main.cpp  rasterizer.cpp
homework_3/: CMakeLists.txt  OBJ_Loader.h  main.cpp  rasterizer.cpp
homework_4/: CMakeLists.txt  main.cpp
homework_5/: CMakeLists.txt
homework_6/: CMakeLists.txt
homework_7/: BVH.cpp  CMakeLists.txt  Scene.cpp
homework_8/: CMakeLists.txt  application.cpp  application.h  main.cpp  mass.h  rope.cpp  rope.h  spring.h
homework_8/CGL/: CMakeLists.txt
